# ecosun

./: .gitignore  Makefile  ecosun.ino
container/: Containerfile  Makefile
frontend/src/app/: globals.css  layout.js  page.js
src/: app.py
src/ecosun/: package.xml  setup.cfg  setup.py
src/ecosun/ecosun/: arduino.py  controller.py  ecosun.py  listener.py  manual_mover.py  test_listener.py
src/ecosun_msgs/: CMakeLists.txt  package.xml
src/ecosun_msgs/msg/: Rotate.msg
