<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>ecosun</name>
  <version>1.0.0</version>
  <description>Ecosun Tracker</description>
  <maintainer email="mauromoltrasio@gmail.com">Mauro E. Moltrasio</maintainer>
  <maintainer email="bmsjale@gmail.com">Alejandro Delgado Martínez</maintainer>
  <maintainer email="alzaro206rc@gmail.com">Álzaro Álvarez Pérez</maintainer>
  <license>Apache-2.0</license>

  <exec_depend>rclpy</exec_depend>
  <exec_depend>ecosun_msgs</exec_depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
