<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>ecosun_msgs</name>
  <version>1.0.0</version>
  <description>Mensajes para EcoSun Tracker</description>
  <maintainer email="mauromoltrasio@gmail.com">Mauro E. Moltrasio</maintainer>
  <maintainer email="bmsjale@gmail.com">Alejandro Delgado Martínez</maintainer>
  <maintainer email="alzaro206rc@gmail.com">Álzaro Álvarez Pérez</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <build_depend>rosidl_default_generators</build_depend>

  <exec_depend>rosidl_default_runtime</exec_depend>

  <member_of_group>rosidl_interface_packages</member_of_group>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
